[package]
name = "leafcast"
version = "0.2.2"
edition = "2021"
authors = ["Jack Wills <email@mrjackwills.com>"]
description = "leafcast pi client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
clap={version="4.3", features = ["derive", "unicode"] }
dotenvy = "0.15"
figlet-rs = "0.1"
futures-util = "0.3"
image = {version="0.24", features = ["webp-encoder"]}
reqwest = {version = "0.11", default-features = false, features=["json", "rustls-tls-native-roots", "gzip", "brotli", "json","cookies", "multipart"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sudo = "0.6"
thiserror = "1.0"
time = {version="0.3", features=["local-offset", "macros"]}
time-tz = "1.0"
tokio = {version ="1.28", features=["full"]}
tokio-tungstenite={version= "0.19", features = ["rustls-tls-native-roots"]}
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = {version="0.3", features = ["json"]}
users = "0.11"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip=true
debug = false
