[package]
name = "leafcast"
version = "0.2.7"
edition = "2021"
authors = ["Jack Wills <email@mrjackwills.com>"]
description = "leafcast pi client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap={version="4.4", features = ["derive", "unicode"] }
data-encoding = "2.4"
dotenvy = "0.15"
figlet-rs = "0.1"
futures-util = "0.3"
image = { version="0.24", features = ["webp-encoder"]}
reqwest = { version = "0.11", default-features = false, features=["brotli", "gzip", "json", "rustls-tls-native-roots"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sudo = "0.6"
thiserror = "1.0"
time = {version="0.3", features=["local-offset", "macros"]}
time-tz = "2.0"
tokio = {version ="1.33", features=["full"]}
tokio-tungstenite={version= "0.20", features = ["rustls-tls-native-roots"]}
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = {version="0.3", features = ["json"]}

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip  =true
debug = false
opt-level = "s"
