[package]
name = "leafcast"
rust-version = "1.89.0"
version = "0.3.3"
edition = "2024"
authors = ["Jack Wills <email@mrjackwills.com>"]
description = "leafcast pi client"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unused_async = "warn"
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
module_name_repetitions = "allow"
doc_markdown = "allow"
similar_names = "allow"

[dependencies]
clap = { version = "4.5", features = ["derive", "unicode"] }
data-encoding = "2.9"
dotenvy = "0.15"
figlet-rs = "0.1"
futures-util = "0.3"
image = { version = "0.25"}
jiff = { version = "0.2", features = ["tzdb-bundle-always"] }
reqwest = { version = "0.12", default-features = false, features = [
	"brotli",
	"gzip",
	"json",
	"rustls-tls-native-roots",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sudo = "0.6"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false
opt-level = "s"
